# BookingTest

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py  models.py  schemas.py
app/api/: bookings.py
app/core/: config.py  db.py  logging_config.py  rate_limit.py
app/services/: bookings.py  notifier.py
app/worker/: celery_app.py  tasks.py
docker/: entrypoint.sh
tests/: conftest.py  test_api.py  test_worker.py
